# openclaw

./: .athena-auto-queue.json  .coverage  .document-quality-thresholds.yaml  .env.example  .env.tuning  .gitignore  .pre-commit-config.yaml  .trufflehog.yaml  24_hour_monitoring_plan.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  OpenHuman-Athena-基因管理系统G1阶段CLI命令实现-VSCode执行指令.md  README.md  SECURITY.md  add_opencode_task_to_queue.py  analyze_approval_backlog.py  analyze_athena_processes.py  analyze_queue_dependencies.py  athena_web_desktop_auto_fix_workflow.py  audit_code_quality.py  automate_document_migration.py  batch_reset_failed.py  check_dependencies.py  check_queue_progress.py  claude_code_phase1_analysis_report.json  claude_code_phase2_deep_analysis_report.json  claude_code_phase3_validation_report.json  cleanup_backups_aggressive.py  cleanup_stale_tasks.py  core_quality_check.py  debug_deduplicate.py  debug_deduplicate_detailed.py  debug_manifest_structure.py  debug_task_fields.py  detect_and_stop_queue_reset.py  diagnose_counts.py  diagnose_queue.py  (+150 more)
.claude/: settings.local.json
.qianwen-auth/: auth-state-v3.json  auth-state-v6.json  auth-state-v7.json  auth-state.json
agent_system/: .env.example  .gitignore  athena_v1_acceptance_report_20260402_201028.md  athena_v1_acceptance_report_20260402_201733.md  athena_v1_test_results_20260402_201028.json  athena_v1_test_results_20260402_201733.json  debug_gate6a_issue.py  run_athena.py  test_gate3_router.py  test_gate4.py  test_gate5.py  test_gate5_complete.py  test_gate5_direct.py  test_gate5_final.py  test_gate5_improved.py  test_gate5_smart.py  test_gate5_summary.py  test_gate6.py  test_gate6_final_summary.py  test_gate6_summary.py  test_gate6a.py  test_gate6b.py
archive/: mark_pending_tasks.py  protect_all_queues.py  quick_fix_queue_stall.py  remove_stale_task.py  reset_gene_audit_to_pending.py  reset_task.py  retry_gene_audit_task.py
athena-ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
autoresearch/: __init__.py  context_compressor.py  maref_v2.py  skillos.py
backups/: opencode-athena-pre-migration
backups/claude-code-setup-pre-migration/stage2/ci-cd-pipelines/examples/python-app/: .env.example  .gitignore  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
backups/claude-code-setup-pre-migration/stage2/ci-cd-pipelines/examples/python-app/k8s/: README.md  namespace.yaml
backups/claude-code-setup-pre-migration/stage2/ci-cd-pipelines/examples/python-app/k8s/production/: config.yaml  deployment.yaml
backups/claude-code-setup-pre-migration/stage2/ci-cd-pipelines/examples/python-app/k8s/staging/: deployment.yaml
backups/claude-code-setup-pre-migration/stage2/ci-cd-pipelines/examples/python-app/src/: models.py  utils.py
backups/claude-code-setup-pre-migration/stage2/ci-cd-pipelines/examples/python-app/tests/integration/: test_api.py
backups/claude-code-setup-pre-migration/stage2/ci-cd-pipelines/examples/python-app/tests/unit/: test_models.py
config/: feature_flags.json  logging_setup.py  paths.py
contracts/: __init__.py  athena_state_sync_adapter.py  data_quality.py  duplicate_analyzer.py  process_lifecycle.py  quality_item.py  state_sync.py  task_identity.py
data/: youtube_tracker.json
docs/: README.md  requirements.txt
execution/: __init__.py
governance/: __init__.py  _utils.py  queue_manager.py  repair_tools.py  system_health.py  task_orchestrator.py
mini-agent/: __init__.py  cost_monitoring_dashboard.py  cost_monitoring_design.md  cost_monitoring_phase4_plan.md  test_deepseek_config.py  test_guardrail.py  test_maref_experiment_integration.py  test_subagent_handoff_validation.py  test_subagent_registry_discovery.py  test_subagent_tool_boundaries.py  validate_cost_extraction.py
monitoring/: maref_scheduler_monitor.py  start_maref_monitor.sh
observability/: adapter.py  observability.env.example  openlit_bootstrap.py  requirements.txt
ops/: __init__.py
output/: claude_code_deep_audit_20260422.md
sandbox/simulators/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  baseline_simulator.py  code_review_checklist.md  comparator_engine.py  data_analysis_script.py  delivery_report.md  deploy.sh  docker-compose.yml  enhanced_hetu_luoshu_scheduler.py  enhanced_simulator.py  evolution_strategies.py  experiment_controller.py  experiment_report_generator.py  findings.md  hetu_hexagram_adapter.py  hexagram_cache.py  hexagram_cache_design.md  integrated_hexagram_state_manager.py.backup  logging.conf  maref_api.py  maref_sandbox_design.md  maref_sdk.py  monitoring_data_analysis.py  next_phase_task_plan.md  performance_benchmark.py  phase22_architecture_analysis.md  progress.md  queue_and_system_progress_20260420.md  queue_and_system_progress_20260420_latest.md  requirements-dev.txt  sandbox_isolation_validator.py  sandbox_manager.py  sandbox_monitor_report.json  setup.cfg  simple_monitor.py  task_plan.md  test_analysis_cache.py  (+17 more)
sandbox/simulators/.github/workflows/: quality-gate.yml
sandbox/simulators/experiment_results/: experiment_log_20260420_194843.txt  final_report_20260420_194913.json  report_summary_20260420_194913.txt
sandbox/simulators/experiment_results/monitoring_data/: metrics_export_20260420_194855.json  metrics_export_20260420_194858.json  metrics_export_20260420_194903.json  metrics_export_20260420_194908.json
sandbox/simulators/test_datasets/: maref_validation_dataset_20260419_200412.json
sandbox/simulators/validation_reports/: isolation_validation_20260419_201253.json  isolation_validation_20260419_201253.txt  isolation_validation_20260419_202406.json  isolation_validation_20260419_202406.txt  isolation_validation_20260419_202441.json  isolation_validation_20260419_202441.txt
scripts/: GENE_QUEUE_WEB_DESKTOP_SETUP.md  QUICKSTART_GENE_MANAGEMENT.md  STRUCTURE.md  __init__.py  add_gene_management_to_aiplan.py  add_gene_queue_to_web_desktop.py  agent_chaos_layer.py  analyze_dependencies.py  analyze_document_readability.py  analyze_manual_hold_tasks.py  analyze_queue_thoroughly.py  (+205 more)
(+2621 files in other folders)
