[metadata]
name = maref-sandbox
version = 1.0.0
author = MAREF Development Team
author_email = maref@example.com
description = MAREF Sandbox Environment with 64 Hexagram State System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/maref-sandbox
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9
install_requires =
    Flask>=2.3.0
    flask-cors>=4.0.0
    requests>=2.31.0

[options.extras_require]
dev =
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pytest>=7.0.0
    pytest-cov>=4.0.0
test = pytest>=7.0.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git, __pycache__, build, dist, *.egg-info, .venv, venv, .tox, .mypy_cache
per-file-ignores =
    __init__.py: F401
    test_*.py: F401, F403, F405, E402, F841
    */test_*.py: F401, F403, F405, E402, F841
    enhanced_hetu_luoshu_scheduler.py: E402
ignore = W605, E731, E501
max-complexity = 10
select = B,C,E,F,W,T4,B9

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool:black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool:mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[mypy-tests.*]
disallow_untyped_defs = false
check_untyped_defs = false
disallow_incomplete_defs = false

[mypy-test_*.py]
disallow_untyped_defs = false
check_untyped_defs = false
disallow_incomplete_defs = false